[project]
name = "comfyui-glifnodes-fork"
description = "Custom set of nodes used by glif.app. With glif you can build mini apps that are powered by custom comfy workflows."
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers==0.32.2"]

[project.urls]
Repository = "https://github.com/kosbeko/ComfyUI-GlifNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kosbekokos"
DisplayName = "ComfyUI-GlifNodes"
Icon = "🇬"
